--- a/package.json
+++ b/package.json
@@ -4,19 +4,27 @@
   "description": "",
   "keywords": [],
   "scripts": {
-    "build": "webpack"
+    "build": "rescript && webpack"
   },
   "devDependencies": {
     "@dfinity/agent": "0.8.8",
+    "@rescript/react": "^0.10.3",
+    "@ryyppy/rescript-promise": "^2.1.0",
     "assert": "2.0.0",
     "buffer": "6.0.3",
     "events": "3.3.0",
     "html-webpack-plugin": "5.3.1",
     "process": "0.11.10",
+    "rescript": "^9.1.4",
     "stream-browserify": "3.0.0",
-    "terser-webpack-plugin": "5.1.1",
+    "ts-loader": "^9.2.3",
+    "typescript": "^4.3.5",
     "util": "0.12.3",
     "webpack": "5.24.4",
     "webpack-cli": "4.5.0"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
