--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "keywords": [],
   "scripts": {
-    "build": "rescript && webpack"
+    "build": "rescript && webpack",
+    "start": "webpack serve"
   },
   "devDependencies": {
     "@dfinity/agent": "0.8.8",
@@ -21,7 +22,8 @@
     "typescript": "^4.3.5",
     "util": "0.12.3",
     "webpack": "5.24.4",
-    "webpack-cli": "4.5.0"
+    "webpack-cli": "4.5.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "react": "^17.0.2",
