--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "events": "3.3.0",
     "html-webpack-plugin": "5.3.1",
     "process": "0.11.10",
+    "reanalyze": "^2.17.0",
     "rescript": "^9.1.4",
     "stream-browserify": "3.0.0",
     "ts-loader": "^9.2.3",
