--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   },
   "devDependencies": {
     "@dfinity/agent": "0.8.8",
+    "@dfinity/auth-client": "^0.9.2",
+    "@dfinity/authentication": "^0.9.2",
+    "@dfinity/candid": "^0.9.2",
+    "@dfinity/identity": "^0.9.2",
+    "@dfinity/principal": "^0.9.2",
     "@rescript/react": "^0.10.3",
     "@ryyppy/rescript-promise": "^2.1.0",
     "assert": "2.0.0",
