--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "keywords": [],
   "scripts": {
     "build": "rescript && webpack",
-    "start": "webpack serve",
+    "start": "rescript && webpack serve",
     "deploy": "dfx deploy",
     "open": "open \"http://127.0.0.1:8000/?canisterId=`dfx canister id frontend`\""
   },
