--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "gentype": "^4.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
