--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "open": "open \"http://127.0.0.1:8000/?canisterId=`dfx canister id frontend`\""
   },
   "devDependencies": {
-    "@dfinity/agent": "0.8.8",
+    "@dfinity/agent": "^0.9.2",
     "@dfinity/auth-client": "^0.9.2",
     "@dfinity/authentication": "^0.9.2",
     "@dfinity/candid": "^0.9.2",
